Fix broken styles

--- a/src/TrelloBoard/styles.scss
+++ b/src/TrelloBoard/styles.scss
@@ -14,13 +14,13 @@
     overflow: scroll;
 
     .task-item-wrap {
-      width: 100%;
+      width: fit-content;
       position: relative;
       button {
         font-size: 16px;
         position: absolute;
         top: 16%;
-        right: 22%;
+        right: 2pc;
         cursor: pointer;
       }
       .task-item {
@@ -33,6 +33,7 @@
         resize: none;
         width: -webkit-fill-available;
         max-width: fit-content;
+        box-shadow: 4px 4px 6px #ccc;
       }
     }
     .add-task-btn {
@@ -41,6 +42,7 @@
       color: #333;
       background: #eee;
       outline: none;
+      border-radius: 6px;
     }
   }
 }
@@ -52,4 +54,10 @@
 .btn-plain {
   background: none;
   border: none;
+}
+
+@media (max-width: 900px) {
+  .task-item-wrap {
+    width: 100% !important;
+  }
 }
